# pi-broadcast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pi-broadcast.desktop  pi-streaming.desktop  update_cargo_version.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
assets/: admin.html  admin.js  app.js  client.js  index.html  lrc-file-parser.min.js  styles.css
media/: What A Beautiful Name - Hillsong Worship.lrc
src/: admin.rs  lib.rs  main.rs  ws.rs
static/: admin.html  client.js  index.html  server.js
