[package]
name = "lyrics-streaming"
version = "0.1.0"
authors = ["Josia Scheytt <jscheytt@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
